# kv-storage-engine

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yml  cppcheck.yml
benchmarks/: benchmark_bloom_filter.cpp  benchmark_compaction.cpp  benchmark_multithreaded.cpp  benchmark_read_latency.cpp  benchmark_write_throughput.cpp
cli/: go.mod
cli/cmd/: main.go
cli/internal/client/: client.go  protocol.go
cli/internal/commands/: config.go  delete.go  get.go  ping.go  root.go  set.go  status.go
cli/internal/config/: config.go
cli/internal/output/: formatter.go
distributed/: CMakeLists.txt
distributed/failure/: heartbeat.cpp
distributed/include/: follower.h  heartbeat.h  leader.h  log_shipper.h  node_registry.h  replication_types.h
distributed/membership/: node_registry.cpp
distributed/replication/: follower.cpp  leader.cpp  log_entry.cpp  log_shipper.cpp
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/configs/: server1.yaml  server2.yaml  server3.yaml
engine/: CMakeLists.txt  Makefile
engine/benchmarks/: benchmark_bloom_filter.cpp  benchmark_compaction.cpp  benchmark_multithreaded.cpp  benchmark_read_latency.cpp  benchmark_write_throughput.cpp
engine/include/: command_parser.h  engine.h  memtable.h  sstable.h  test_framework.h  wal.h
engine/src/: bloom_filter.cpp  command_parser.cpp  engine.cpp  main.cpp  memtable.cpp  wal.cpp  write_queue.cpp
engine/tests/: main.cpp  test_bloom_filter.cpp  test_engine.cpp  test_lru_cache.cpp  test_memtable.cpp  test_sstable.cpp  test_table_version.cpp  test_wal.cpp  test_write_queue.cpp
include/: bloom_filter.h  command_parser.h  lru_cache.h  memtable.h  sstable.h  storage_engine.h  table_version.h  test_framework.h  types.h  wal.h  write_queue.h
scripts/: build.sh  check.sh  ci.sh  clean.sh  common.sh  deploy.sh  docker-build.sh  docker-down.sh  docker-logs.sh  docker-up.sh  run.sh  run_cluster.sh  test.sh
server/: CMakeLists.txt  server.yaml  server1.yaml  server2.yaml  server3.yaml
server/include/: config_parser.h  connection_handler.h  protocol.h  tcp_server.h
server/src/: config_parser.cpp  connection_handler.cpp  main.cpp  protocol.cpp  tcp_server.cpp
src/: bloom_filter.cpp  command_parser.cpp  lru_cache.cpp  main.cpp  memtable.cpp  sstable.cpp  storage_engine.cpp  table_version.cpp  test_framework.cpp  wal.cpp  write_queue.cpp
terraform/: main.tf  outputs.tf  setup.sh  terraform.tfvars.example  user-data.sh  variables.tf
tests/: main.cpp  test_memtable.cpp  test_storage_engine.cpp  test_wal.cpp
